# rust_chat

backend/: .gitignore  1  1.history  Cargo.toml  chat_db.sqlite3
backend/src/: db_manager.rs  main.rs  models.rs  requests.rs  responses.rs
frontend/: Cargo.toml
frontend/src/: main.rs  models.rs  requests.rs  responses.rs  settings.rs  ui.rs
frontend/src/ui/: chat.rs  contacts.rs  login.rs  register.rs
