[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde = {version= "1", features = ["derive"]}
serde_json = "1"
eframe = { version = "0.21.3", default-features = false, features = ["default_fonts", "glow", "persistence"] }
